# protos

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  NON_IDEAL_AGENTS.md  README.md  flake.nix
capsule/: Cargo.toml
capsule/src/: lib.rs
content-identity/: ARCHITECTURE.md  Cargo.toml  README.md
content-identity/src/: domain.rs  envelope.rs  error.rs  hash.rs  hasher.rs  lib.rs  portable.rs
content-identity/tests/: byte_compatibility.rs  derivation.rs
name-table/: ARCHITECTURE.md  Cargo.toml  README.md
name-table/src/: boundary.rs  error.rs  identifier.rs  lib.rs  name.rs  projection.rs  table.rs  transaction.rs
name-table/tests/: aliases.rs  archive.rs  bounds.rs  continuity.rs  interning.rs  projection.rs  transaction.rs  walkers.rs
raw-discovery/: ARCHITECTURE.md  Cargo.toml  README.md
raw-discovery/src/: block.rs  error.rs  lib.rs  profile.rs  recognizer.rs
raw-discovery/tests/: archive.rs  atom_cases.rs  delimiters.rs  dot_application.rs  dotted_primitives.rs  parser_progress.rs  pipe_text.rs  profile.rs  token_profile.rs
short-identifier/: Cargo.toml
short-identifier/src/: lib.rs
structural-codec/: ARCHITECTURE.md  Cargo.toml  README.md
structural-codec-derive/: ARCHITECTURE.md  Cargo.toml  README.md
structural-codec-derive/fixtures/: Cargo.toml
structural-codec-derive/fixtures/src/: lib.rs
structural-codec-derive/fixtures/tests/: conformance.rs
structural-codec-derive/src/: generate.rs  lib.rs  spec.rs
structural-codec/src/: authoring.rs  codec.rs  conformance.rs  disjoint.rs  encoded_form.rs  error.rs  evaluator.rs  fixture.rs  form.rs  ids.rs  lib.rs  table.rs  textual_form.rs  value.rs  writer.rs
structural-codec/tests/: conformance_harness.rs  disjointness.rs  encoded_form.rs  evaluator_behavior.rs  laws.rs  normalization.rs  textual_profile.rs  writer.rs
