[package]
name         = "capsule"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/protos"
description  = "The self-contained exchange capsule for encoded forms and composed nametrees."
publish      = false

[lib]
name = "capsule"
path = "src/lib.rs"

[dependencies]
content-identity = { path = "../content-identity" }
name-table       = { path = "../name-table" }
short-identifier = { path = "../short-identifier" }
rkyv             = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
thiserror        = "2"

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
