[package]
name         = "content-identity"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/protos"
description  = "Portable content identity for stringless Core values: the rkyv portable-archive discipline and one domain-separated, layout-versioned blake3 content hash."
publish      = false

[lib]
name = "content_identity"
path = "src/lib.rs"

[dependencies]
blake3    = "1"
rkyv      = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
thiserror = "2"

[dev-dependencies]
blake3 = "1"

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
