[package]
name         = "structural-codec-derive-fixtures"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/protos"
description  = "The FixtureFamily mirrored as attribute-derived Rust types, plus the law-5 conformance suite proving the generated codecs agree with the trusted evaluator. The cross-check that the derived entries equal core-schema's authored entries lives downstream in core-schema, where the machinery resolves at a single pin."
publish      = false

[lib]
name = "structural_codec_derive_fixtures"
path = "src/lib.rs"

[dependencies]
structural-codec-derive = { path = ".." }
structural-codec = { path = "../../structural-codec" }
name-table       = { path = "../../name-table" }
raw-discovery    = { path = "../../raw-discovery" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
